DITETS-1154 Fix z-index old header and collapse

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -975,7 +975,7 @@ body.application {
 
 /** APP NAVIGATION */
 .app-navigation {
-  z-index: 1000;
+  z-index: 998;
   & >nav {
     margin: 0px;
   }
